--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "laravel/laravel": "*"
+        "laravel/laravel": "*",
+        "fruitcake/laravel-cors": "*"
     }
 }
